cmake_minimum_required(VERSION 3.2)
project(SFMLTutor)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES main.cpp UI/Managers/State.h UI/Managers/StateMachine.cpp UI/Managers/StateMachine.h UI/Managers/AssetManager.cpp UI/Managers/AssetManager.h UI/Managers/InputManager.cpp UI/Managers/InputManager.h UI/App.cpp UI/App.h UI/DEFINITIONS.h UI/States/MainMenuState.cpp UI/States/MainMenuState.h Structures/Table/Array.cpp Structures/Table/Array.h Structures/List/List.cpp Structures/List/List.h Structures/Heap/Heap.cpp Structures/Heap/Heap.h UI/States/TableMenuState.cpp UI/States/TableMenuState.h UI/States/InputState.cpp UI/States/InputState.h)
add_executable(SFMLTutor ${SOURCE_FILES})
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
find_package(SFML REQUIRED system window graphics network audio)
if (SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
target_link_libraries(SFMLTutor ${SFML_LIBRARIES})
endif()